תיקון עמוד גוגל לוגין
תיקון של קונטיינר נון

--- a/Server/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Server/Areas/Identity/Pages/Account/Login.cshtml
@@ -55,32 +55,32 @@
         @{
             if ((Model.ExternalLogins?.Count ?? 0) == 0)
             {
-                        <div>
-                            <p>
-                                There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                    article
-                                    about setting up this ASP.NET application to support logging in via external services
-                                </a>.
-                            </p>
-                        </div>
+                                        <div>
+                                            <p>
+                                                There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                                    article
+                                                    about setting up this ASP.NET application to support logging in via external services
+                                                </a>.
+                                            </p>
+                                        </div>
             }
             else
             {
-                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                            <div>
-                                <p>
-                                    @foreach (var provider in Model.ExternalLogins!)
+                                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                            <div>
+                                                <p>
+                                                    @foreach (var provider in Model.ExternalLogins!)
                             {
-                                        <button type="submit" id="google_login_btn" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
-                                            <div class="loginBtnWrapper">
-                                                התחברות באמצעות <img src="/images/google.svg" />
-                                            </div>
+                                                        <button type="submit" id="google_login_btn" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">
+                                                            <div class="loginBtnWrapper">
+                                                                התחברות באמצעות <img src="/images/google.svg" />
+                                                            </div>
 
-                                        </button>
+                                                        </button>
                             }
-                                </p>
-                            </div>
-                        </form>
+                                                </p>
+                                            </div>
+                                        </form>
             }
         }
     </section>
@@ -105,7 +105,19 @@
     }
 
     .container {
-        height: 100%
+        height: 100%;
+        color: #6775F4;
+        background-color: #6775F4;
+        border: none;
+    }
+
+    footer{
+        display:none;
+    }
+
+    a{
+        text-decoration:none;
+        color: #6775F4;
     }
 
     h3 {
@@ -161,9 +173,11 @@
         justify-content: space-around;
     }
 
-    .container{
+    /*.container{
         display: none;
-    }
+    }*/
+
+
 
 </style>
 
