--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -474,13 +474,14 @@ input:checked + .slider:before {
     flex-direction: column;
     align-items: flex-start;
     text-align: right;
+    justify-content: space-around;
+    height: 100%;
 }
 
 .progress-nav-bar {
     display: flex;
     justify-content: center;
     width: 70%;
-    margin: 2vh 0;
     column-gap: 1vh;
 }
 
@@ -503,6 +504,7 @@ input:checked + .slider:before {
     height: 1vh;
     border-radius: 0.3rem;
     background-color: #D6D9F1;
+    
 }
 
 .storyTitle {
@@ -539,7 +541,8 @@ input:checked + .slider:before {
 .outerFirstStory {
     display: flex;
     flex-direction: column;
-    row-gap: 2vh;
+    height: 75%;
+    justify-content: space-around;
 }
 
 .imgWrapper {
@@ -547,4 +550,108 @@ input:checked + .slider:before {
     width: 100%;
     align-items: center;
     justify-content: center;
+}
+
+.outerStory {
+    height:90%;
+}
+
+.outerText{
+    display:flex;
+    flex-direction:column;
+}
+
+.outerPhaseAndClose {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 1vh;
+}
+
+.outerSecondStory {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.storyTag {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 0.25rem;
+    width: 5.5rem;
+    height: 2rem;
+    justify-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+}
+
+.outerStoryTags {
+    display: flex;
+    row-gap: 2vh;
+    flex-direction: column;
+    width: 100%;
+    align-content: flex-start;
+    padding: 0;
+}
+
+.outerPerTag {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ol li::marker {
+    background-color: #EDEFF7; /* Change the color of the numbers */
+    font-size: 1.2rem; /* Change the size of the numbers */
+    font-weight: 700; /* Make the numbers bold */
+}
+
+.storyTagNum {
+    display: inline-block; /* Use block to allow width and height */
+    width: 50px; /* Diameter of the circle */
+    height: 50px; /* Diameter of the circle */
+    border-radius: 50%; /* Makes the element circular */
+    background-color: #e0e4eb; /* Background color of the circle */
+    color: #333; /* Color of the number */
+    font-size: 24px; /* Size of the number */
+    font-family: Arial, sans-serif; /* Font style */
+    line-height: 50px; /* Centers the text vertically */
+    text-align: center; /* Centers the text horizontally */
+    font-weight: bold; /* Makes the font bold */
+}
+
+.tagsAmount{
+    font-weight:700;
+}
+
+.outerThirdStory {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.outerGraph{
+
+}
+
+.incomeStory {
+    border-radius: 0.375rem;
+    border: 1.5px solid #D6D9F1;
+    background: rgba(255, 255, 255, 0.00);
+    padding: 1vh;
+    margin-top: 1vh;
+    text-align: center;
 }
