--- a/Client/Pages/Index.razor.css
+++ b/Client/Pages/Index.razor.css
@@ -655,3 +655,40 @@ ol li::marker {
     margin-top: 1vh;
     text-align: center;
 }
+
+.profileAndStreak {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.profilePic {
+    width: 3rem;
+    height: 3rem;
+    background-color: #F9F9F9;
+    border: 3.5px solid #6775F4;
+    color: inherit;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.outerTopSection {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+.streakStatus {
+    width: 13vw;
+    height: 6vh;
+}
